<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title and Description -->
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:paddingBottom="16dp"/>

        <!-- List of categories -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:id="@+id/land_developed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_developed"
                    android:textSize="18sp"
                    android:background="#F08080"
                    android:textStyle="bold"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:id="@+id/land_developed_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_developed_desc"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Repeat CardView for each type of land category -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:id="@+id/land_empty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_empty"
                    android:textSize="18sp"
                    android:background="#D2B48C"
                    android:textStyle="bold"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:id="@+id/land_empty_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_empty_desc"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:id="@+id/land_water"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_water"
                    android:textSize="18sp"
                    android:background="#87CEFA"
                    android:textStyle="bold"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:id="@+id/land_water_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_water_desc"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:id="@+id/land_swamp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_swamp"
                    android:textSize="18sp"
                    android:background="#008080"
                    android:textStyle="bold"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:id="@+id/land_swamp_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_swamp_desc"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:id="@+id/land_shrub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_shrub"
                    android:textSize="18sp"
                    android:background="#90EE90"
                    android:textStyle="bold"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:id="@+id/land_shrub_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_shrub_desc"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:id="@+id/land_dry_rice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_dry_rice"
                    android:textSize="18sp"
                    android:background="#228B22"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:id="@+id/land_dry_rice_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_dry_rice_desc"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:id="@+id/land_wet_rice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_wet_rice"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:background="#808000"
                    android:textStyle="bold"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:id="@+id/land_wet_rice_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_wet_rice_desc"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:id="@+id/land_plantation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_plantation"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:background="#006400"
                    android:textStyle="bold"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:id="@+id/land_plantation_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_plantation_desc"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:id="@+id/land_forest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_forest"
                    android:textSize="18sp"
                    android:background="#FF8C00"
                    android:textStyle="bold"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:id="@+id/land_forest_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_forest_desc"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EDFF80"
                android:padding="16dp">
                <TextView
                    android:id="@+id/caution_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caution_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:id="@+id/caution_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caution_desc"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/caution_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caution_info"
                    android:textStyle="italic"
                    android:textSize="14sp"
                    android:textColor="@android:color/holo_blue_light"
                    android:autoLink="web"
                    android:clickable="true"
                    android:focusable="true"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Add more CardViews for each type of land category as needed -->

    </LinearLayout>

</ScrollView>
